
	* Remove Ecore_Evas Cocoa backend that use depreacted Evas Quartz
	backend.

2011-04-11  Hannes Janetzek

	* Fix removal of windows from ignore_list with ecore_x_window_ignore_set

2011-04-13  Doyun Kang

	* Ecore_X + Ecore_Evas: Add more support for shape input setting

2011-04-15  Carsten Haitzler (The Rasterman)

        * Fix bug in Ecore_Evas setting modifiers for
        sub-buffer-canvas. They never got set. Now they do.

2011-04-19 Mike Blumenkrantz

        * Add ecore_exe_data_set

2011-04-20  Carsten Haitzler (The Rasterman)

        * Added ecore animator timeline, where animator runs for a
        specified time (in seconds) and then stops, but it also passes
        the position in the timeline (as a 0.0 to 1.0 value) to the
        callback which it can then use the new pos map call to map to
        some ease in/out, bounce, spring or whatever position.

2011-04-28  Eduardo Felipe Castegnaro

        * Add a monotonic clock implementation for Mac OS X to fix warning.
        Mac OS X does not provide an implementation of clock_gettime()
        even though it's POSIX, but it does provide a fast high-resolution
        monotonic clock through mach specific APIs that are perfectly suited
        for usage in ecore_timer.

2011-04-20  Jihoon Kim

        * Ecore_IMF: Added support for auto-capitalization and prediction
        control API's

2011-05-03  Carsten Haitzler (The Rasterman)

        * Fixed null pointer dereference in selection notification
        handling in Ecore_X.

2011-05-12  Carsten Haitzler (The Rasterman)

        * Add a custom Ecore Animator source and tick ability to be able
        to plug in external animator tick sources like vblank interrupts
        and so on.

2011-05-14  Cedric Bail

	* Sync GNUTLS threads activation with Eina.

2011-05-14  Vincent Torri

	* Make ecore_con work on Windows (only the local connections
	need a port)
	* Make ecore_ipc compile on Windows

2011-05-17  Cedric Bail

	* Add ecore_timer_dump.